output.module.scss - overflow hidden in .numberButtons was hiding tooltip refactoring section-layout.js - no longer sets the decimal place after toggling % show-metrics.js - added localDecimal - without this constant, the toggle percentages button in in SectionLayout, would have changed all the value by setting specific decimal place

--- a/components/output/output.module.scss
+++ b/components/output/output.module.scss
@@ -169,7 +169,6 @@
   display: flex;
   justify-content: flex-end;
   flex-grow: 1;
-  overflow: hidden;
 
   @media (max-width: $breakpoint600) {
     align-self: flex-end;
